<resources>
    <!-- Custom Fonts-->
    <string name="font_family_jio_type">"JioType-Bold.ttf"</string>
    <string name="btn_start_session">Start Session</string>
    <string name="label_safety">Safety</string>
    <string name="label_time">Time</string>
    <string name="label_violations">Violations</string>
    <string name="btn_end_session">End Session</string>
    <string name="alrt_safe_distance_violated">Safe distance violated</string>
    <string name="alrt_move_away_to_a_safe_distance">Move away to a safe distance</string>
    <string name="label_session_ended">Session ended</string>
    <string name="head_ar_safety_detection">AR SAFETY\nDETECTION</string>
    <string name="head_you_need_to_enable_the_following_to_use_the_app">You need to enable the\nfollowing to use the app</string>
    <string name="btn_get_started">Get Started</string>
    <string name="title_required_permission">Required Permissions</string>
    <string name="msg_required_permission">This app needs both the permissions to use the features of the app. You can grant them in app settings.</string>
    <string name="btn_goto_settings">GOTO SETTINGS</string>
    <string name="btn_cancel">Cancel</string>
    <string name="label_vibration">Vibration</string>
    <string name="label_vin_info">For when the social distance\nspace is violated</string>
    <string name="label_notifications">Notifications</string>
    <string name="label_notif_info">Get notified when there’s an update\nin your leaderboard</string>
    <string name="label_sounds">Sounds</string>
    <string name="label_sound_indo">Played when the social distance\nspace is violated</string>
    <string name="label_my_journal">My Journal</string>
    <string name="label_global_rank_info">You’re now at the %s position\non the leaderboard!</string>
    <string name="violation">%s violation</string>
    <string name="violation_percent">%s%</string>
    <string name="label_walk_through_one">Use the app to practice\nsafe social distancing</string>
    <string name="label_walk_through_two">Compete with people\naround you</string>
    <string name="btn_local">Local</string>
    <string name="btn_global">Global</string>
    <string name="label_tracked_so_far">tracked so far</string>
    <string name="label_safety_maintained">safety maintained</string>
    <string name="label_violations_so_far">violations so far</string>
    <string name="label_safety_and_violations">Safety and violations</string>
    <string name="label_enter_your_name_to_track">Enter your name\nto track your social distancing</string>
    <string name="btn_continue">Continue</string>
    <string name="hint_full_name">Full Name</string>

</resources>
