<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivJioLogo"
            android:layout_width="@dimen/_54DP"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:layout_marginTop="@dimen/_34DP"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_jio_logo" />

        <TextView
            android:id="@+id/tvLoginHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24DP"
            android:text="@string/label_enter_your_name_to_track"
            android:textSize="@dimen/_16SP"
            android:textColor="@color/textColorBlack"
            android:gravity="center"
            android:textStyle="bold"
            app:customFont="@{@string/font_family_jio_type}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivJioLogo" />

        <EditText
            android:id="@+id/etUserName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45DP"
            android:layout_marginStart="@dimen/_20DP"
            android:layout_marginTop="@dimen/_34DP"
            android:layout_marginEnd="@dimen/_20DP"
            android:paddingStart="@dimen/_9DP"
            android:paddingEnd="@dimen/_6DP"
            android:hint="@string/hint_full_name"
            android:inputType="textCapWords"
            android:background="@drawable/bg_name_edittext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLoginHeader"
            app:layout_constraintVertical_bias="0.36" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20DP"
            android:layout_marginTop="@dimen/_20DP"
            android:layout_marginEnd="@dimen/_20DP"
            android:padding="@dimen/_14DP"
            android:text="@string/btn_continue"
            android:textColor="@color/white"
            android:textSize="@dimen/_12SP"
            android:textAllCaps="false"
            android:gravity="center"
            android:background="@drawable/bg_btn_get_start"
            app:elevation="@dimen/_5DP"
            app:customFont="@{@string/font_family_jio_type}"
            app:layout_constraintTop_toBottomOf="@id/etUserName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>