<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="sessionInfo"
            type="android.tesseract.jio.covid19.ar.networkcalling.model.SessionInfo" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/baseBgColor"
        tools:context=".ar.core.sessions.end.SessionEndFragment">

        <LinearLayout
            android:id="@+id/llSessionEndDialog"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_255DP"
            android:layout_marginStart="@dimen/_8DP"
            android:layout_marginEnd="@dimen/_8DP"
            android:orientation="vertical"
            android:background="@drawable/bg_card_session_info"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_26DP"
                android:contentDescription="@null"
                app:srcCompat="@drawable/ic_flag" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_16DP"
                android:text="@string/label_session_ended"
                android:textColor="@color/textColorBlack"
                android:textSize="@dimen/_17SP"
                android:textStyle="bold"
                app:customFont="@{@string/font_family_jio_type}" />

            <TextView
                android:id="@+id/tvRankInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_4DP"
                android:lineSpacingExtra="@dimen/_5SP"
                android:textAlignment="center"
                android:textColor="@color/textColorGray"
                android:textSize="@dimen/_10SP"
                android:textStyle="bold"
                app:customFont="@{@string/font_family_jio_type}" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/endSessionWatchLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_17DP"
                android:layout_marginTop="@dimen/_20DP"
                android:layout_marginEnd="@dimen/_17DP"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/endSessionSafetyPercentLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/endSessionSafetyDivider"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_happy1"
                        android:drawablePadding="@dimen/_3DP"
                        android:text="@string/label_safety"
                        android:textColor="@color/textColorBlack"
                        android:textSize="@dimen/_10SP"
                        app:customFont="@{@string/font_family_jio_type}" />

                    <TextView
                        android:id="@+id/tvSafetyPercent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_3DP"
                        android:text="@{sessionInfo.safetyPercent}"
                        android:textColor="@color/textColorBlack"
                        android:textSize="@dimen/_14SP"
                        android:textStyle="bold"
                        app:customFont="@{@string/font_family_jio_type}" />


                </LinearLayout>

                <ImageView
                    android:id="@+id/endSessionSafetyDivider"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10DP"
                    android:contentDescription="@null"
                    app:layout_constraintStart_toEndOf="@id/endSessionSafetyPercentLayout"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/endSessionTimeLayout"
                    app:srcCompat="@drawable/ic_path_divider" />

                <LinearLayout
                    android:id="@+id/endSessionTimeLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12DP"
                    android:orientation="vertical"
                    app:layout_constraintStart_toEndOf="@id/endSessionSafetyDivider"
                    app:layout_constraintEnd_toStartOf="@id/endSessionTimeDivider"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_time1"
                        android:drawablePadding="@dimen/_3DP"
                        android:text="@string/label_time"
                        android:textColor="@color/textColorBlack"
                        android:textSize="@dimen/_10SP"
                        app:customFont="@{@string/font_family_jio_type}" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_3DP"
                        android:text="@{sessionInfo.sessionTime}"
                        android:textColor="@color/textColorBlack"
                        android:textSize="@dimen/_14SP"
                        android:textStyle="bold"
                        app:customFont="@{@string/font_family_jio_type}" />


                </LinearLayout>

                <ImageView
                    android:id="@+id/endSessionTimeDivider"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10DP"
                    android:contentDescription="@null"
                    app:layout_constraintStart_toEndOf="@id/endSessionTimeLayout"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/endSessionSafetyViolationsLayout"
                    app:srcCompat="@drawable/ic_path_divider" />

                <LinearLayout
                    android:id="@+id/endSessionSafetyViolationsLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12DP"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/endSessionTimeDivider"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_warning1"
                        android:drawablePadding="@dimen/_3DP"
                        android:text="@string/label_violations"
                        android:textColor="@color/textColorBlack"
                        android:textSize="@dimen/_10SP"
                        app:customFont="@{@string/font_family_jio_type}" />

                    <TextView
                        android:id="@+id/tvViolationCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_3DP"
                        android:textColor="@color/textColorBlack"
                        android:textSize="@dimen/_14SP"
                        android:textStyle="bold"
                        app:customFont="@{@string/font_family_jio_type}" />


                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabCloseSession"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_232DP"
            android:src="@drawable/ic_close"
            app:backgroundTint="@color/cutButtonColor"
            app:elevation="@dimen/_2DP"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/llSessionEndDialog"
            app:tint="@color/white"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>